# TP_project

./: .gitignore  CMakeLists.txt  PlayerTests.cpp  README.md  builder  main.cpp  not_main.cpp  tests.cpp
SFML-2.5.1/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
include/Adapters/: BulletAdapter.h  SmallAsteroidAdapter.h
include/Artist/: Artist.h
include/Asteroids/: OrdinaryAsteroid.h  SmallAsteroid.h
include/BaseObject/: Object.h
include/Bullet/: Bullet.h
include/Factories/: FrozenAsteroidFactory.h  ObjectFactory.h  OrdinaryAsteroidFactory.h
include/Player/: Player.h
include/SpecialEffects/: FreezeEffect.h  HydraEffect.h  SpecialEffect.h
include/Timer/: Timer.h
src/: Artist.cpp  Artist.h  Bullet.cpp  Bullet.h  BulletAdapter.cpp  BulletAdapter.h  BulletFactory.cpp  BulletFactory.h  FreezeEffect.cpp  FreezeEffect.h  FrozenAsteroidFactory.cpp  FrozenAsteroidFactory.h  HydraEffect.cpp  HydraEffect.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  OrdinaryAsteroid.cpp  OrdinaryAsteroid.h  OrdinaryAsteroidFactory.cpp  OrdinaryAsteroidFactory.h  Player.cpp  Player.h  SmallAsteroid.cpp  SmallAsteroid.h  SmallAsteroidAdapter.cpp  SmallAsteroidAdapter.h  SmallAsteroidFactory.cpp  SmallAsteroidFactory.h  SpecialEffect.h
src/Adapters/: BulletAdapter.cpp  CMakeLists.txt  SmallAsteroidAdapter.cpp
src/Artist/: Artist.cpp  CMakeLists.txt
src/Asteroids/: CMakeLists.txt  OrdinaryAsteroid.cpp  SmallAsteroid.cpp
src/BaseObject/: CMakeLists.txt  Object.cpp
src/Bullet/: Bullet.cpp  CMakeLists.txt
src/Factories/: CMakeLists.txt  FrozenAsteroidFactory.cpp  OrdinaryAsteroidFactory.cpp
src/Player/: CMakeLists.txt  Player.cpp
src/SpecialEffects/: CMakeLists.txt  FreezeEffect.cpp  HydraEffect.cpp
src/Timer/: CMakeLists.txt  Timer.cpp
